--- a/style.css
+++ b/style.css
@@ -160,3 +160,14 @@ footer{
   font-weight: 400;
 }
 
+/* media queries */
+@media (min-width: 700px) {
+  :root {
+    --bg-url: url(./assets/bg-desktop.jpg);
+  }
+  
+  .light {
+    --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
+}
+
